Cleanup Trogdor Module