@@ -20,7 +20,6 @@ package org.apache.kafka.trogdor.task;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -35,7 +34,7 @@ public class SampleTaskSpec extends TaskSpec {
                         @JsonProperty("error") String error) {
         super(startMs, durationMs);
         this.nodeToExitMs = nodeToExitMs == null ? new HashMap<>() :
-            Collections.unmodifiableMap(nodeToExitMs);
+            Map.copyOf(nodeToExitMs);
         this.error = error == null ? "" : error;
     }
 
